public/stylesheets/custom.css
body { 
	background: -moz-linear-gradient(360deg, #ffffff 0%, #e5e5e5 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#ffffff), color-stop(100%,#e5e5e5)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(360deg, #ffffff 0%,#e5e5e5 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(360deg, #ffffff 0%,#e5e5e5 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(360deg, #ffffff 0%,#e5e5e5 100%); /* IE10+ */
	background: linear-gradient(360deg, #ffffff 0%,#e5e5e5 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
	background-repeat: no-repeat;
	background-position: center;
	background-size: 100% 100%;
	overflow: auto;
}

article {width:90%; height:100%; font-size: 90%; margin: 4.5em auto 0 auto; overflow: hidden; 
	padding-bottom: 1em; background-color: #e3e3e3; box-shadow: 1px 1px 1px 1px #999;}
article#teamsContainer {min-width:1100px;}
nav {width: 100%; background: #555;  padding: .3em 0;}
header, footer {height: 3em; background: #555; clear: both; width: 100%;}
header {position: fixed; top: 0;}
footer {position: fixed; bottom: 0; height: 1.5em;}
header h1 {margin: 0.5rem 0 0; color: #fffff0; text-align: center;}
nav menu {width:90%; margin:auto; color: #fff; }
menu a {color:#fff;}
menu a:visited {color:#fff;}
ul li {list-style-type: none; padding-bottom: 0.3em;}
li img, li a {vertical-align: middle; margin-right: 0.5em}
#leagueList, #standings {float: left; margin-right: 1em;}
#standings, #gamesPlayed {display: none; margin-left: 2em; margin-top: 1em; background-color: #add8e6; padding: 0.5em;}
#gamesPlayed {max-height: 90%; overflow-y: scroll;background-color: #eee; position:relative;}
a.standings {display: inline-block; font-size: 80%; text-indent: 1em; float: right; margin-top: 0.3em; margin-left:1em; height: 1rem; width: 1rem;}
#leagueList h3 {clear: both; float: left; margin: 0.2em 0;}
h3 a {text-indent: .5em; display: inline-block;}
.teamcrest {width: 1.25em}
ul.teamList, #leagueList {width:auto; height: 100%; float: left; margin-bottom: 1em; background: #222b2e; padding: 1em 1em 4em;}
#leagueList a, ul.teamList a {color: #eee;}
#leagueList h2 {color: #ddd; clear:both; padding-top: 1rem;}
.teamInfo {float:left; width: 73%; min-width: 38rem; margin: -0.7em 0 0 -1em; font-size:.9rem; background: #add8e6; padding: 0 1em;
	background-position: right top; background-repeat: no-repeat; background-size: 5em auto;}
p {line-height: 150%;}
th, td {padding: .3em; text-align: left;}
.playerList {font-size: .9rem; width: 95%;}
.playerList tbody tr:nth-child(2n-1), #standings tbody tr:nth-child(odd), #gamesPlayed tbody tr:nth-child(odd) {background-color: #9bc2cf;}
.box { box-shadow: 1px 1px 1px 1px;}
.bar { fill: steelblue;}
.bar:hover { fill: brown;}
.axis { font: 10px sans-serif;}
.axis path, .axis line {fill: none; stroke: #000; shape-rendering: crispEdges;}
.x.axis path {display: none;}
.barContainer {font-size: .75em;}
#chartContainer {display: none; float:left; margin-left: 2em;}
.arc text {font-size: .5em}
path.slice{ stroke-width:2px;}
polyline{opacity: .3; stroke: black; stroke-width: 2px; fill: none;}
#gamesPlayed > a.close {display: block; position: absolute; top: 0; right: 0;
  padding: 3px 6px; border: 1px solid #333; border-radius: 1rem; margin: .2em;
  background-color: #666; color: #fff; line-height: 100%;}
.games-scores {width: 16px; height: 16px; display: block; margin: auto;}
td.date {text-align: right;}

#error {color: red; display: none; margin: 15% auto; width: 40%; text-align: center; padding: 1em;}
.points {font-weight: 700;}
p.blurb {
    margin: 2em 1em 0 40em;
    border: 1px outset #ccc;
    padding: .5em;
    background-color: lightcyan;
}
span.standings {
    width: 1.1em;
    height: 1.12em;
    display: inline-block;
    background-color: #222b2e;
}

